--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "^16.0.8",
     "qrcode": "^1.5.4",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "resend": "^6.7.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
